--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
         
         <repository>
             <id>zml2008</id>
-            <url>http://files.zachsthings.com/repo/</url>
+            <url>https://github.com/zml2008/zml2008.github.io/</url>
         </repository>
     </repositories>
 
