--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.worldcretornicaPlotMe</groupId>
+            <groupId>com.worldcretornica</groupId>
             <artifactId>PlotMe</artifactId>
             <version>0.13g-SNAPSHOT</version>
         </dependency>
